Fixing vertical border + flex-wrap

--- a/container.css
+++ b/container.css
@@ -1,5 +1,6 @@
 .container {
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
   grid-row-gap: 0;
@@ -76,20 +77,21 @@
   border-width: 1px;
   border-style: solid;
   border-radius: 15px;
+  border-color: lightgrey;
   position : relative;
   page-break-inside: avoid;
 }
 
 #secondcont {
   margin: 2.5mm;
-  flex: 1;
+  min-width: 50%;
 }
 
 #barcodeorchestra {
   margin-top: 10.4mm;
   margin-left: 9.4mm;
   height: 37.1mm;
-  flex: 1;
+  min-width: 50%;
 }
 
 #firstcont {
